--- a/src/index.css
+++ b/src/index.css
@@ -91,11 +91,11 @@ body {
   align-items: center;
 }
 
-.list li label {
-  display: flex;
-  gap: 0.25rem;
+.checkbox {
   cursor: pointer;
-  align-items: center;
+}
+
+.list li label {
   word-break: break-word; /* Добавленный стиль для переноса слов */
   overflow-wrap: break-word;
 }
@@ -104,37 +104,8 @@ body {
   outline: 1px solid hsl(200, 100%, 50%);
 }
 
-.list li input {
-  outline: none;
-  width: 0;
-  height: 0;
-  appearance: none;
-  pointer-events: none;
-  position: absolute;
-}
-
-.list li label::before {
-  content: "";
-  display: block;
-  width: 0.9rem;
-  height: 0.9rem;
-  background: hsl(200, 100%, 90%);
-  border-radius: 0.25em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .list li label:hover::before {
   background: hsl(200, 100%, 80%);
-}
-
-.list li:has(input:checked) label::before {
-  content: "✔";
-  background: hsl(200, 100%, 40%);
-  color: hsl(200, 100%, 90%);
-  font-size: 0.75rem;
-  font-weight: bold;
 }
 
 .list li:has(input:checked) label:hover::before {
